Adds logic to show indicator for documents that have expired.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -144,7 +144,9 @@
 
     <!-- Dashboard -->
     <string name="dashboard_title">Welcome back</string>
-    <string name="dashboard_document_expiration">Valid until</string>
+    <string name="dashboard_document_has_not_expired">Valid until</string>
+    <string name="dashboard_document_has_expired_one">Expired\ </string>
+    <string name="dashboard_document_has_expired_two">on</string>
     <string name="dashboard_document_no_expiration_found">@string/generic_dash</string>
     <string name="dashboard_primary_fab_text">SHOW QR / TAP</string>
     <string name="dashboard_secondary_fab_text">ADD DOC</string>
