--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="content_description_success">Success</string>
     <string name="content_description_clock_timer">Clock timer</string>
     <string name="content_description_arrow_right">Arrow right</string>
+    <string name="content_description_open_new">Open new</string>
 
     <!-- Document Types -->
     <string name="pid">National ID</string>
@@ -162,6 +163,7 @@
     <string name="dashboard_bottom_sheet_options_title">More options</string>
     <string name="dashboard_bottom_sheet_options_action_1">Change quick pin</string>
     <string name="dashboard_bottom_sheet_options_action_2">Scan a QR code</string>
+    <string name="dashboard_bottom_sheet_options_action_3">Retrieve logs</string>
 
     <string name="dashboard_bottom_sheet_bluetooth_title">Enable bluetooth?</string>
     <string name="dashboard_bottom_sheet_bluetooth_subtitle">Enable bluetooth to share your information using the QR/TAP option</string>
@@ -175,6 +177,7 @@
 
     <string name="dashboard_bottom_sheet_deferred_documents_ready_title">Documents issued</string>
     <string name="dashboard_bottom_sheet_deferred_documents_ready_subtitle">New documents have been added to your wallet.</string>
+    <string name="dashboard_intent_chooser_logs_share_title">Share logs</string>
 
     <!-- Qr Scan -->
     <string name="qr_scan_permission_not_granted">Camera permission not provided\nOpen App Settings</string>
