Refactor: Update icons alpha handling
Update icon alpha handling to be applied through the `enabled` property rather than `contentAlpha`.
This ensures icons are displayed correctly in enabled and disabled states across different components.

Update the string "More Items Vertically" to "More Items".

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="content_description_user_image">User image</string>
     <string name="content_description_user_signature">User signature</string>
     <string name="content_description_qr_code">QR Code</string>
-    <string name="content_description_more_vert_icon">More Items Vertically</string>
+    <string name="content_description_more_vert_icon">More Items</string>
     <string name="content_description_arrow_back_icon">Go Back</string>
     <string name="content_description_close_icon">Close</string>
     <string name="content_description_warning_icon">Warning</string>
